# luminary

./: .gitconfig  .gitignore  CLAUDE.md
luminary/: .gitignore  Containerfile  Makefile  compose.yaml  pyproject.toml  requirements.txt
luminary/app/: config.py  dependencies.py  main.py  models.py
luminary/app/routers/: environments.py  proxy.py  spec.py
luminary/app/services/: proxy_service.py  spec_service.py  store.py
luminary/app/static/: index.html
luminary/tests/: conftest.py  test_environments.py  test_main.py  test_proxy.py  test_spec.py
myproject/: .gitignore  compose.yaml  pyproject.toml  requirements.txt
myproject/app/: main.py
myproject/app/static/: index.html
myproject/tests/: test_main.py
